--- a/css/resume.css
+++ b/css/resume.css
@@ -2,6 +2,17 @@ body {
     background-color: #282828;
     color: #ebdbb2;
     font-family: RandyGG, sans-serif;
+    font-size: 1.5rem;
+}
+
+textarea {
+    color: #ebdbb2;
+    background-color: #282828;
+    font-family: RandyGG, sans-serif;
+    resize: none;
+    font-size: 1.5rem;
+    outline: 0;
+    line-height: 1rem;
 }
 
 
@@ -11,13 +22,16 @@ body {
     align-items: center;
 }
 
+.input-container {
+    display: inline-block;
+}
+
 .titlebar {
     margin-top: 4px;
     font-size: 1.2rem;
     flex-grow: 1;
     text-align: center;
-    margin: 0;
-    padding: 0;
+    margin: 0;    padding: 0;
 }
 
 .circ-container {
@@ -48,6 +62,15 @@ body {
 
 .description {
     margin-top: 3rem;
-    font-size: 1.5rem;
+
 }
 
+.powerbtn-container {
+    display: flex;
+    justify-content: center;
+}
+
+.powerbtn {
+    width: 500px;
+
+}
